Initial Settings dialog complete; Help dialog for date formats complete

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -3,6 +3,7 @@
 #
 NavHelp.okButton.mnemonic=O
 NavHelp.okButton.text=OK
+NavHelp.okButton.text_2=OK
 Navigator.buttonBack.toolTipText=Back (Alt-Left)
 Navigator.buttonForward.toolTipText=Forward (Alt-Right)
 Navigator.buttonHintTracking.mnemonic=K
@@ -135,27 +136,22 @@ Navigator.splitPaneBackup.tab.mnemonic=A
 Navigator.splitPaneBackup.tab.title=BackUp
 Navigator.splitPaneBrowser.tab.mnemonic=R
 Settings.cancelButton.text=Cancel
-Settings.checkBox5.text=text
-Settings.checkBox6.text=text
-Settings.checkBox7.text=text
-Settings.checkBox8.text=text
-Settings.checkBox9.text=text
-Settings.label10.text=Hide files in tree\:
-Settings.label11.text=Hide hidden files\:
-Settings.label12.text=Sort case-insensitive\:
-Settings.label13.text=Sort folders before files\:
-Settings.label14.text=Sort reverse\:
-Settings.label2.text=Preserve file timestamps\:
-Settings.label3.text=Restore previous session\:
-Settings.label4.text=Show confirmation dialogs\:
-Settings.label5.text=Look 'n Feel\:
-Settings.label6.text=Locale\:
-Settings.label7.text=Binary (1024) K scale\:
-Settings.label8.text=Date format\:
-Settings.label9.text=Hint Tracking button color\:
+Settings.hideFilesInTreeLabel.text=Hide files in tree\:
+Settings.hideHiddenFilesLabel.text=Hide hidden files\:
+Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
+Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
+Settings.sortReverseLabel.text=Sort reverse\:
+Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
+Settings.restoreSessionLabel.text=Restore previous session\:
+Settings.showConfirmationsLabel.text=Show confirmation dialogs\:
+Settings.lookFeelLabel.text=Look 'n Feel\:
+Settings.localeLabel.text=Locale\:
+Settings.scaleLabel.text=Binary (1024) K scale\:
+Settings.dateFormatLabel.text=Date format\:
+Settings.hintButtonColorLabel.text=Hint Tracking button color\:
 Settings.okButton.text=OK
-Settings.panel1.tab.title=General
-Settings.panel2.tab.title=Appearance
-Settings.panel3.tab.title=Browser
-Settings.panel4.tab.title=Backup
-Settings.panel5.tab.title=Libraries
+Settings.generalPanel.tab.title=General
+Settings.apperancePanel.tab.title=Appearance
+Settings.browserPanel.tab.title=Browser
+Settings.backupPanel.tab.title=Backup
+Settings.librariesPanel.tab.title=Libraries
