Interim commit on progress handling

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -77,8 +77,7 @@ Navigator.menuItemRename.mnemonic=R
 Navigator.menuItemRename.text=Rename ...
 Navigator.menuItemRenamer.mnemonic=R
 Navigator.menuItemRenamer.text=Renamer ...
-Navigator.menuItemRestore.mnemonic_2=R
-Navigator.menuItemRestore.text=Restore
+Navigator.menuItemRestore.mnemonic=R
 Navigator.menuItemSaveLayout.mnemonic_3=L
 Navigator.menuItemSaveLayout.text=Save Layout
 Navigator.menuItemSettings.mnemonic_2=S
@@ -135,6 +134,7 @@ Navigator.scrollPaneProperties.tab.title=Properties
 Navigator.splitPaneBackup.tab.mnemonic=A
 Navigator.splitPaneBackup.tab.title=BackUp
 Navigator.splitPaneBrowser.tab.mnemonic=R
+Progress.progressText.text=text
 Settings.cancelButton.text=Cancel
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
 Settings.hideHiddenFilesLabel.text=Hide hidden files\:
@@ -142,7 +142,6 @@ Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
 Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
 Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
-Settings.restoreSessionLabel.text=Restore previous session\:
 Settings.showConfirmationsLabel.text=Show confirmation dialogs\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.localeLabel.text=Locale\:
