Added progress dialog

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -7,7 +7,7 @@ NavHelp.okButton.text_2=OK
 Navigator.buttonBack.toolTipText=Back (Alt-Left)
 Navigator.buttonForward.toolTipText=Forward (Alt-Right)
 Navigator.buttonHintTracking.mnemonic=K
-Navigator.buttonHintTracking.text=Hint Tracking
+Navigator.buttonHintTracking.text=\ Hint Tracking
 Navigator.buttonJobs.text=Jobs ...
 Navigator.buttonNewFolder.mnemonic=N
 Navigator.buttonRun.text=Run
@@ -134,7 +134,6 @@ Navigator.scrollPaneProperties.tab.title=Properties
 Navigator.splitPaneBackup.tab.mnemonic=A
 Navigator.splitPaneBackup.tab.title=BackUp
 Navigator.splitPaneBrowser.tab.mnemonic=R
-Progress.progressText.text=text
 Settings.cancelButton.text=Cancel
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
 Settings.hideHiddenFilesLabel.text=Hide hidden files\:
