Added confirm options to Settings; optimized moves; fixed bugs

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -81,7 +81,7 @@ Navigator.menuItemRestore.mnemonic=R
 Navigator.menuItemSaveLayout.mnemonic_3=L
 Navigator.menuItemSaveLayout.text=Save Layout
 Navigator.menuItemSettings.mnemonic_2=S
-Navigator.menuItemSettings.text=Settings
+Navigator.menuItemSettings.text=Settings ...
 Navigator.menuItemShowHidden.mnemonic=H
 Navigator.menuItemShowHidden.text=Show Hidden
 Navigator.menuItemSplitHorizontal.mnemonic=H
@@ -141,7 +141,10 @@ Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
 Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
 Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
-Settings.showConfirmationsLabel.text=Show confirmation dialogs\:
+Settings.showDeleteConfirmationLabel.text=Delete confirmation\:
+Settings.showCcpConfirmationLabel.text=Copy/Cut/Paste confirmation\:
+Settings.showDndConfirmationLabel.text=Drag 'n Drop confirmation\:
+Settings.showTouchConfirmationLabel.text=Touch confirmation\:
 Settings.lookFeelLabel.text=Look 'n Feel\:
 Settings.localeLabel.text=Locale\:
 Settings.scaleLabel.text=Binary (1024) K scale\:
