Refactored for i18n; Translations requested

--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -1,4 +1,322 @@
 #
-# English United States
+# Default and en_US locale
+# Trailing spaces are important
 #
-
+Browser.computer=Computer
+Browser.delete.are.you.sure1=Are you sure you want to delete {0}{1, choice, 0# remote |1# }{2, choice, 0#items |1#item }containing {3}{4, choice, 0# files|1# file}, {5}
+Browser.delete.are.you.sure2=\ and the content of {0, choice, 0#all directories|1#the directory}
+Browser.delete.cannot=Cannot delete: 
+Browser.dry.run=\ (dry-run)
+Browser.error.launching.item=Error launching item
+Browser.error=ERROR: 
+Browser.home=Home
+Browser.launch.of.items.not.supported=items not supported
+Browser.launch.of=Launch of 
+Browser.open.a.publisher=--Open a publisher--
+Browser.open.a.subscriber=--Open a subscriber--
+Browser.select.library.source=Select one of the {0} sources defined for library {1}:
+Browser.skipping=Skipping: 
+Browser.system=System
+Browser.touch.are.you.sure1=Are you sure you want to touch {0}{1, choice, 0# remote |1# }{2, choice, 0#items |1#item }containing {3}{4, choice, 0# files|1# file}, {5}
+Browser.touch.are.you.sure2=\ and the content of {0, choice, 0#all directories|1#the directory}
+Browser.touch.cannot=Cannot touch: 
+Browser.touch.error=Error touching: 
+BrowserTable.column.modified=Modified
+BrowserTable.column.name=Name
+BrowserTable.column.size=Size
+Edit.new.folder.cannot.create.new.folder.in.current.location=Cannot create new folder in current location
+Edit.new.folder.creating=Creating 
+Edit.new.folder.directory.not.created.check.permissions=Directory not created, check permissions.
+Edit.new.folder.directory=directory
+Edit.new.folder.error.creating=Error creating 
+Edit.new.folder.for=New folder for 
+Edit.new.folder.please.select.a.single.destination.for.a.new.folder=Please select a single destination for a new folder
+Edit.rename.cannot.rename.current.location=Cannot rename current location
+Edit.rename.error.renaming=Error renaming: 
+Edit.rename.please.select.a.single.item.to.be.renamed=Please select a single item to be renamed
+Edit.rename.rename=Rename 
+Edit.rename.to=to: 
+File.open.error.file.not.found=File not found: 
+File.open.error.select.a.file.only=Select a file only
+File.open.hint.keys.error.opening.hint.keys=Error opening hint keys: 
+File.open.hint.keys.files=ELS Hint Keys (*.keys)
+File.open.hint.keys=Open ELS Hint Keys
+File.open.publisher.collection.radio.tooltip=Running on a media collection, server or back-up
+File.open.publisher.collection.radio=Collection
+File.open.publisher.error.opening.publisher.library=Error opening publisher library: 
+File.open.publisher.files=ELS Library files (*.json)
+File.open.publisher.system.type=System type:
+File.open.publisher.workstation.radio.tooltip=Running on a workstation
+File.open.publisher.workstation.radio=Workstation
+File.open.publisher=Open ELS Publisher Library
+File.open.subscriber.close.current.remote.connection=Close current remote connection?
+File.open.subscriber.connection.checkbox.tooltip=Be sure an ELS Subscriber Listener (--remote S) is running on the remote system
+File.open.subscriber.connection.checkbox=&nbsp;&nbsp;Remote<br/>Connection&nbsp;&nbsp;
+File.open.subscriber.error.opening.subscriber.library=Error opening subscriber library: 
+File.open.subscriber.files=ELS Library files (*.json)
+File.open.subscriber.please.open.a.publisher.library.first=Please open a Publisher Library first
+File.open.subscriber.remote.subscriber.failed.to.connect=Remote subscriber failed to connect
+File.open.subscriber.subscriber.sftp.failed.to.connect=Subscriber sftp failed to connect
+File.open.subscriber=Open ELS Subscriber Library
+File.save.layout.error.saving.layout=Error saving layout: 
+NavHelp.error.opening.help.file=Error opening help file: 
+NavHelp.okButton.mnemonic=O
+NavHelp.okButton.text=OK
+NavHelp.this.name=NavHelp
+NavHelp.this.title=NavHelp
+NavTransferHandler.action.cancelled=Action cancelled
+NavTransferHandler.are.you.sure.you.want.to=Are you sure you want to {0} {1} in {2}{3, choice, 0# files|1# file} to {4}?
+NavTransferHandler.cannot.transfer.to.currently.selected.location=Cannot transfer to currently selected location
+NavTransferHandler.cannot.transfer=Cannot transfer 
+NavTransferHandler.completion.message={0} {1}{2, choice, 0# items|1# item}{3, choice, 0# (dry-run)|1#}
+NavTransferHandler.continue=Continue?
+NavTransferHandler.copied=Copied
+NavTransferHandler.copy=Copy
+NavTransferHandler.delete.directory.error=Error deleting directory: 
+NavTransferHandler.delete.directory.message=\ delete directory {0, choice, 0#dry-run |1#}{1}
+NavTransferHandler.delete.file.error=Error deleting file: 
+NavTransferHandler.delete.file.message=\ delete file {0, choice, 0#dry-run |1#}{1}
+NavTransferHandler.error.getting.transfer.data=Error getting transfer data: 
+NavTransferHandler.error.importing=Error importing: 
+NavTransferHandler.failed=\ failed
+NavTransferHandler.get=Get
+NavTransferHandler.move=Move
+NavTransferHandler.moved=Moved
+NavTransferHandler.nothing.to.do=Nothing to do
+NavTransferHandler.progress.of=\ of 
+NavTransferHandler.put=Put
+NavTransferHandler.source.target.are.the.same=Source & target are the same
+NavTransferHandler.transfer.complete=Transfer complete
+NavTransferHandler.transfer.file.from=\ from 
+NavTransferHandler.transfer.file.to=\ to 
+NavTreeNode.bookmark=Bookmark
+NavTreeNode.collection=Collection
+NavTreeNode.computer=Computer
+NavTreeNode.could.not.retrieve.listing.from=Could not retrieve listing from 
+NavTreeNode.deep.scan.local.directory=Deep scan local directory 
+NavTreeNode.deep.scan.remote.directory=Deep scan remote directory 
+NavTreeNode.directory=Directory
+NavTreeNode.drive=Drive
+NavTreeNode.file=File
+NavTreeNode.home=Home
+NavTreeNode.item=\ item
+NavTreeNode.items=\ items
+NavTreeNode.library=Library
+NavTreeNode.local=Local 
+NavTreeNode.received.entries.from=\ received entries from 
+NavTreeNode.remote=Remote 
+NavTreeNode.scanning.home.directory=Scanning home directory 
+NavTreeNode.scanning.local.directory=Scanning local directory 
+NavTreeNode.scanning.local.drive=Scanning local drive 
+NavTreeNode.scanning.local.library=Scanning local library 
+NavTreeNode.scanning.remote.directory=Scanning remote directory 
+NavTreeNode.scanning.remote.drive=Scanning remote drive 
+NavTreeNode.scanning.remote.library=Scanning remote library 
+NavTreeNode.source=\ source
+NavTreeNode.sources=\ sources
+NavTreeNode.swing.worker.fault.during.get.of=Swing worker fault during get of 
+NavTreeNode.system=System
+NavTreeNode.unknown=Unknown
+Navigator.buttonBack.toolTipText=Back (Alt-Left)
+Navigator.buttonForward.toolTipText=Forward (Alt-Right)
+Navigator.buttonHintTracking.mnemonic=K
+Navigator.buttonHintTracking.text=\ Hint Tracking
+Navigator.buttonJobs.text=Jobs ...
+Navigator.buttonNewFolder.mnemonic=N
+Navigator.buttonRun.text=Run
+Navigator.detected.local.system.as=Detected local system as 
+Navigator.displaying=Displaying Navigator
+Navigator.error.launching.browser=Error launching browser
+Navigator.error.writing.hint=Error writing Hint: 
+Navigator.help.controls.title=ELS Navigator Controls
+Navigator.initialized=Initialized Navigator
+Navigator.labelStatusLeft.text=Status Left
+Navigator.labelStatusRight.text=Status Right
+Navigator.menuBookmarks.mnemonic=B
+Navigator.menuBookmarks.text=Bookmarks
+Navigator.menuEdit.mnemonic=E
+Navigator.menuEdit.text=Edit
+Navigator.menuFile.mnemonic=F
+Navigator.menuFile.text=File
+Navigator.menuHelp.mnemonic=H
+Navigator.menuHelp.text=Help
+Navigator.menuItemAbout.mnemonic=A
+Navigator.menuItemAbout.text=About
+Navigator.menuItemAddBookmark.mnemonic=A
+Navigator.menuItemAddBookmark.text=Add current location
+Navigator.menuItemBookmarksManage.mnemonic_2=M
+Navigator.menuItemBookmarksManage.text=Manage ...
+Navigator.menuItemControls.mnemonic=C
+Navigator.menuItemControls.text=Controls
+Navigator.menuItemCopy.mnemonic=C
+Navigator.menuItemCopy.text=Copy
+Navigator.menuItemCut.mnemonic=U
+Navigator.menuItemCut.text=Cut
+Navigator.menuItemDelete.mnemonic=D
+Navigator.menuItemDelete.text=Delete
+Navigator.menuItemDocumentation.mnemonic=D
+Navigator.menuItemDocumentation.text=Documentation
+Navigator.menuItemDuplicates.mnemonic_2=D
+Navigator.menuItemDuplicates.text=Duplicate Finder ...
+Navigator.menuItemExternalTools.mnemonic_2=E
+Navigator.menuItemExternalTools.text=External Tools ...
+Navigator.menuItemFileQuit.mnemonic=Q
+Navigator.menuItemFileQuit.text=Quit
+Navigator.menuItemFind.mnemonic=F
+Navigator.menuItemFind.text=Find ...
+Navigator.menuItemGitHubProject.mnemonic=G
+Navigator.menuItemGitHubProject.text=GitHub Project
+Navigator.menuItemJobsManage.mnemonic=M
+Navigator.menuItemJobsManage.text=Manage ...
+Navigator.menuItemJunk.mnemonic=J
+Navigator.menuItemJunk.text=Junk Remover ...
+Navigator.menuItemMaximize.mnemonic=X
+Navigator.menuItemMaximize.text=Maximize
+Navigator.menuItemMinimize.mnemonic_2=N
+Navigator.menuItemMinimize.text=Minimize
+Navigator.menuItemNewFolder.mnemonic_2=N
+Navigator.menuItemNewFolder.text=New Folder ...
+Navigator.menuItemOpenHintKeys.mnemonic=K
+Navigator.menuItemOpenHintKeys.text=Open Hint Keys ...
+Navigator.menuItemOpenHintServer.mnemonic=H
+Navigator.menuItemOpenHintServer.text=Open Hint Server ...
+Navigator.menuItemOpenPublisher.mnemonic_2=P
+Navigator.menuItemOpenPublisher.text=Open Publisher ...
+Navigator.menuItemOpenSubscriber.mnemonic=S
+Navigator.menuItemOpenSubscriber.text=Open Subscriber ...
+Navigator.menuItemPaste.mnemonic=P
+Navigator.menuItemPaste.text=Paste
+Navigator.menuItemPlexGenerator.mnemonic=P
+Navigator.menuItemPlexGenerator.text=Plex Profile Generator ...
+Navigator.menuItemQuitTerminate.mnemonic=X
+Navigator.menuItemQuitTerminate.text=Quit & Exit Remote
+Navigator.menuItemRefresh.mnemonic=R
+Navigator.menuItemRefresh.text=Refresh
+Navigator.menuItemRename.mnemonic=R
+Navigator.menuItemRename.text=Rename ...
+Navigator.menuItemRenamer.mnemonic=R
+Navigator.menuItemRenamer.text=Renamer ...
+Navigator.menuItemRestore.mnemonic=R
+Navigator.menuItemRestore.text=Restore
+Navigator.menuItemSaveLayout.mnemonic_3=L
+Navigator.menuItemSaveLayout.text=Save Layout
+Navigator.menuItemSettings.mnemonic_2=S
+Navigator.menuItemSettings.text=Settings ...
+Navigator.menuItemShowHidden.mnemonic=H
+Navigator.menuItemShowHidden.text=Show Hidden
+Navigator.menuItemSplitHorizontal.mnemonic=H
+Navigator.menuItemSplitHorizontal.text=Split Browser Horizontally
+Navigator.menuItemSplitVertical.mnemonic=V
+Navigator.menuItemSplitVertical.text=Split Browser Vertically
+Navigator.menuItemTouch.mnemonic=T
+Navigator.menuItemTouch.text=Touch Date/Time
+Navigator.menuJobs.mnemonic=J
+Navigator.menuJobs.text=Jobs
+Navigator.menuTools.mnemonic=T
+Navigator.menuTools.text=Tools
+Navigator.menuView.mnemonic=V
+Navigator.menuView.text=View
+Navigator.menuWindows.mnemonic=W
+Navigator.menuWindows.text=Window
+Navigator.newFolder=New ...
+Navigator.panelCollectionOne.tab.mnemonic=1
+Navigator.panelCollectionOne.tab.title=Collection 1
+Navigator.panelCollectionTwo.tab.mnemonic_2=3
+Navigator.panelCollectionTwo.tab.title=Collection 3
+Navigator.panelLibraries.tab.mnemonic=I
+Navigator.panelSystemOne.tab.mnemonic=2
+Navigator.panelSystemOne.tab.title=Publisher 2
+Navigator.panelSystemTwo.tab.mnemonic=4
+Navigator.panelSystemTwo.tab.title=Subscriber 4
+Navigator.popupMenuItemBottom.mnemonic=B
+Navigator.popupMenuItemBottom.text=Bottom
+Navigator.popupMenuItemClear.mnemonic=C
+Navigator.popupMenuItemClear.text=Clear
+Navigator.popupMenuItemCopy.mnemonic=C
+Navigator.popupMenuItemCopy.text=Copy
+Navigator.popupMenuItemCut.mnemonic=U
+Navigator.popupMenuItemCut.text=Cut
+Navigator.popupMenuItemDelete.mnemonic=D
+Navigator.popupMenuItemDelete.text=Delete
+Navigator.popupMenuItemFind.mnemonic=F
+Navigator.popupMenuItemFind.text=Find ...
+Navigator.popupMenuItemNewFolder.mnemonic=N
+Navigator.popupMenuItemNewFolder.text=New Folder ...
+Navigator.popupMenuItemPaste.mnemonic=P
+Navigator.popupMenuItemPaste.text=Paste
+Navigator.popupMenuItemRename.mnemonic=R
+Navigator.popupMenuItemRename.text=Rename ...
+Navigator.popupMenuItemTouch.mnemonic=T
+Navigator.popupMenuItemTouch.text=Touch Date/Time
+Navigator.remote.lowercase=remote
+Navigator.scrollPaneLog.tab.mnemonic=L
+Navigator.scrollPaneLog.tab.title=Log
+Navigator.scrollPaneProperties.tab.mnemonic=P
+Navigator.scrollPaneProperties.tab.title=Properties
+Navigator.splitPaneBackup.tab.mnemonic=A
+Navigator.splitPaneBackup.tab.title=BackUp
+Navigator.splitPaneBrowser.tab.mnemonic=R
+Properties.drives=Drives: 
+Properties.free=Free: 
+Properties.libraries=Libraries: 
+Properties.path=Path: 
+Properties.size=Size: 
+Properties.source=Source:
+Properties.type=Type: 
+Settings.appearance.Panel.tab.title=Appearance
+Settings.backupPanel.tab.title=Backup
+Settings.browserPanel.tab.title=Browser
+Settings.cancelButton.text=Cancel
+Settings.date.format.help.title=Date Format Help
+Settings.date.format.not.valid=The date format is not valid
+Settings.dateFormatLabel.text=Date format\:
+Settings.dateInfoButton.text.tooltip=Display date formatting help
+Settings.dateInfoButton.text=Info
+Settings.error.changing.look.n.feel=Error changing Look 'n Feel: 
+Settings.generalPanel.tab.title=General
+Settings.hideFilesInTreeLabel.text=Hide files in tree\:
+Settings.hideHiddenFilesLabel.text=Hide hidden files\:
+Settings.hintButtonColorLabel.text=Hint Tracking button color\:
+Settings.librariesPanel.tab.title=Libraries
+Settings.localeLabel.text=Locale\:
+Settings.lookFeelLabel.text=Look 'n Feel\:
+Settings.okButton.text=OK
+Settings.preserveFileTimestampsLabel.text=Preserve file timestamps\:
+Settings.scaleCheckBox.text=uncheck for decimal (1000) K
+Settings.scaleLabel.text=Binary (1024) K scale\:
+Settings.showCcpConfirmationLabel.text=Copy/Cut/Paste confirmation\:
+Settings.showDeleteConfirmationLabel.text=Delete confirmation\:
+Settings.showDndConfirmationLabel.text=Drag 'n Drop confirmation\:
+Settings.showTouchConfirmationLabel.text=Touch confirmation\:
+Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
+Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
+Settings.sortReverseLabel.text=Sort reverse\:
+Settings.this.title=ELS Navigator Settings
+Transfer.checking=Checking {0, choice, 0#target location|1#library source} for {1} with minimum {2} on {3, choice, 0#remote|1#local} path {4} has 
+Transfer.copying=Copying
+Transfer.could.not.retrieve.remote.collection.file=Could not retrieve remote collection file
+Transfer.could.not.retrieve.remote.library.file=Could not retrieve remote library file
+Transfer.created.hint.file=Created Hint file 
+Transfer.does.not.exist.skipping=\  ! Does not exist, skipping: 
+Transfer.from.library.not.found=\  ! From library not found: 
+Transfer.mv.directory.file=\  > mv {0, choice, 0#directory |1#file }
+Transfer.no.space.on.any.target.location=No space on any target location of {0} for {1} that is {2}
+Transfer.no.subdirectory.in.path=No subdirectory in path: 
+Transfer.no.target.library.match.found.for.library=No target library match found for library 
+Transfer.original.storage.location.too.full=Original storage location too full for {0} {1} at {2}
+Transfer.previous.directory.was.not.empty=\  ! Previous directory was not empty: 
+Transfer.publisher.data.incomplete.missing.flavor=Publisher data incomplete, missing 'flavor'
+Transfer.received.subscriber.commands=Received subscriber commands: 
+Transfer.requesting.subscriber.library=Requesting subscriber library
+Transfer.rm.directory=\  > rm directory: 
+Transfer.rm.file=\  > rm file: 
+Transfer.subscriber.data.incomplete.missing.flavor=Subscriber data incomplete, missing 'flavor'
+Transfer.t.target.is.required.for.this.operation=-t or -T target is required for this operation
+Transfer.target.exists.will.overwrite=\  ! Target exists, will overwrite: 
+Transfer.to.library.not.found=\  ! To library not found: 
+Transfer.updated.hint.file=Updated Hint file 
+Transfer.using.original.storage.location=Using original storage location for {0} at {1}
+Transfer.would.copy=Would copy
+Transfer.would.mv.directory.file=\  > Would mv {0, choice, 0#directory |1#file }
+Transfer.would.rm.directory=\  > Would rm directory: 
+Transfer.would.rm.file=\  > Would rm file: 
