--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -2,15 +2,16 @@
 # Default and en_US locale
 # Trailing spaces are important
 #
+About.this.title=About
 Browser.computer=Computer
 Browser.delete.are.you.sure1=Are you sure you want to delete {0}{1, choice, 0# remote |1# }{2, choice, 0#items |1#item }containing {3}{4, choice, 0# files|1# file}, {5}
 Browser.delete.are.you.sure2=\ and the content of {0, choice, 0#all directories|1#the directory}
 Browser.delete.cannot=Cannot delete: 
 Browser.dry.run=\ (dry-run)
 Browser.error.launching.item=Error launching item
-Browser.error=ERROR: 
+Browser.error=Error: 
 Browser.home=Home
-Browser.launch.of.items.not.supported=items not supported
+Browser.launch.of.items.not.supported=\ items not supported
 Browser.launch.of=Launch of 
 Browser.open.a.publisher=--Open a publisher--
 Browser.open.a.subscriber=--Open a subscriber--
@@ -59,6 +60,8 @@ File.open.subscriber.remote.subscriber.failed.to.connect=Remote subscriber faile
 File.open.subscriber.subscriber.sftp.failed.to.connect=Subscriber sftp failed to connect
 File.open.subscriber=Open ELS Subscriber Library
 File.save.layout.error.saving.layout=Error saving layout: 
+MainFrame.cancelling.transfer.s.at.user.request=Cancelling transfer(s) at user request
+MainFrame.transfer.s.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
 NavHelp.error.opening.help.file=Error opening help file: 
 NavHelp.okButton.mnemonic=O
 NavHelp.okButton.text=OK
@@ -68,27 +71,25 @@ NavTransferHandler.action.cancelled=Action cancelled
 NavTransferHandler.are.you.sure.you.want.to=Are you sure you want to {0} {1} in {2}{3, choice, 0# files|1# file} to {4}?
 NavTransferHandler.cannot.transfer.to.currently.selected.location=Cannot transfer to currently selected location
 NavTransferHandler.cannot.transfer=Cannot transfer 
-NavTransferHandler.completion.message={0} {1}{2, choice, 0# items|1# item}{3, choice, 0# (dry-run)|1#}
 NavTransferHandler.continue=Continue?
 NavTransferHandler.copied=Copied
 NavTransferHandler.copy=Copy
 NavTransferHandler.delete.directory.error=Error deleting directory: 
-NavTransferHandler.delete.directory.message=\ delete directory {0, choice, 0#dry-run |1#}{1}
+NavTransferHandler.delete.directory.message=delete directory {0, choice, 0#dry-run |1#}{1}
 NavTransferHandler.delete.file.error=Error deleting file: 
-NavTransferHandler.delete.file.message=\ delete file {0, choice, 0#dry-run |1#}{1}
-NavTransferHandler.error.getting.transfer.data=Error getting transfer data: 
-NavTransferHandler.error.importing=Error importing: 
+NavTransferHandler.delete.file.message=delete file {0, choice, 0#dry-run |1#}{1}
 NavTransferHandler.failed=\ failed
-NavTransferHandler.get=Get
+NavTransferHandler.get=Get 
+NavTransferHandler.hint.could.not.be.created=Hint could not be created. Possible configuration or permissions problem.
 NavTransferHandler.move=Move
 NavTransferHandler.moved=Moved
 NavTransferHandler.nothing.to.do=Nothing to do
 NavTransferHandler.progress.of=\ of 
-NavTransferHandler.put=Put
+NavTransferHandler.put=Put 
 NavTransferHandler.source.target.are.the.same=Source & target are the same
-NavTransferHandler.transfer.complete=Transfer complete
 NavTransferHandler.transfer.file.from=\ from 
 NavTransferHandler.transfer.file.to=\ to 
+NavTransferWorker.cancelled=NavTransferWorker cancelled
 NavTreeNode.bookmark=Bookmark
 NavTreeNode.collection=Collection
 NavTreeNode.computer=Computer
@@ -119,6 +120,7 @@ NavTreeNode.system=System
 NavTreeNode.unknown=Unknown
 Navigator.buttonBack.toolTipText=Back (Alt-Left)
 Navigator.buttonForward.toolTipText=Forward (Alt-Right)
+Navigator.buttonUp.toolTipText=Up to parent (Alt-Up)
 Navigator.buttonHintTracking.mnemonic=K
 Navigator.buttonHintTracking.text=\ Hint Tracking
 Navigator.buttonJobs.text=Jobs ...
@@ -188,6 +190,8 @@ Navigator.menuItemPaste.mnemonic=P
 Navigator.menuItemPaste.text=Paste
 Navigator.menuItemPlexGenerator.mnemonic=P
 Navigator.menuItemPlexGenerator.text=Plex Profile Generator ...
+Navigator.menuItemProgress.mnemonic=P
+Navigator.menuItemProgress.text=Progress
 Navigator.menuItemQuitTerminate.mnemonic=X
 Navigator.menuItemQuitTerminate.text=Quit & Exit Remote
 Navigator.menuItemRefresh.mnemonic=R
@@ -256,6 +260,7 @@ Navigator.scrollPaneProperties.tab.title=Properties
 Navigator.splitPaneBackup.tab.mnemonic=A
 Navigator.splitPaneBackup.tab.title=BackUp
 Navigator.splitPaneBrowser.tab.mnemonic=R
+Progress.this.title=ELS Progress
 Properties.drives=Drives: 
 Properties.free=Free: 
 Properties.libraries=Libraries: 
@@ -266,6 +271,8 @@ Properties.type=Type:
 Settings.appearance.Panel.tab.title=Appearance
 Settings.backupPanel.tab.title=Backup
 Settings.browserPanel.tab.title=Browser
+Settings.buttonChooseColor.text=Choose
+Settings.buttonChooseColor.toolTipText=Select color of Hint Tracking button
 Settings.cancelButton.text=Cancel
 Settings.date.format.help.title=Date Format Help
 Settings.date.format.not.valid=The date format is not valid
@@ -291,6 +298,7 @@ Settings.showTouchConfirmationLabel.text=Touch confirmation\:
 Settings.sortCaseSensitiveLabel.text=Sort case-insensitive\:
 Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
+Settings.textFieldHintButtonColor.toolTipText=RGB color in hexidecimal
 Settings.this.title=ELS Navigator Settings
 Transfer.checking=Checking {0, choice, 0#target location|1#library source} for {1} with minimum {2} on {3, choice, 0#remote|1#local} path {4} has 
 Transfer.copying=Copying
@@ -303,6 +311,7 @@ Transfer.mv.directory.file=\  > mv {0, choice, 0#directory |1#file }
 Transfer.no.space.on.any.target.location=No space on any target location of {0} for {1} that is {2}
 Transfer.no.subdirectory.in.path=No subdirectory in path: 
 Transfer.no.target.library.match.found.for.library=No target library match found for library 
+Transfer.of.complete=Transfer of {0} complete
 Transfer.original.storage.location.too.full=Original storage location too full for {0} {1} at {2}
 Transfer.previous.directory.was.not.empty=\  ! Previous directory was not empty: 
 Transfer.publisher.data.incomplete.missing.flavor=Publisher data incomplete, missing 'flavor'
