--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -60,6 +60,15 @@ File.open.subscriber.remote.subscriber.failed.to.connect=Remote subscriber faile
 File.open.subscriber.subscriber.sftp.failed.to.connect=Subscriber sftp failed to connect
 File.open.subscriber=Open ELS Subscriber Library
 File.save.layout.error.saving.layout=Error saving layout: 
+JunkRemover.buttonCopy.text=Copy
+JunkRemover.buttonDelete.text=Delete
+JunkRemover.buttonNewRow.text=New
+JunkRemover.buttonDeleteRow2.text=Delete
+JunkRemover.buttonNew.text=New
+JunkRemover.cancelButton.text=Cancel
+JunkRemover.displayName=Junk Remover
+JunkRemover.doneButton.text=Done
+JunkRemover.this.title=Junk Remover
 MainFrame.cancelling.transfer.s.at.user.request=Cancelling transfer(s) at user request
 MainFrame.transfer.s.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
 NavHelp.error.opening.help.file=Error opening help file: 
@@ -120,12 +129,12 @@ NavTreeNode.system=System
 NavTreeNode.unknown=Unknown
 Navigator.buttonBack.toolTipText=Back (Alt-Left)
 Navigator.buttonForward.toolTipText=Forward (Alt-Right)
-Navigator.buttonUp.toolTipText=Up to parent (Alt-Up)
 Navigator.buttonHintTracking.mnemonic=K
 Navigator.buttonHintTracking.text=\ Hint Tracking
-Navigator.buttonJobs.text=Jobs ...
 Navigator.buttonNewFolder.mnemonic=N
 Navigator.buttonRun.text=Run
+Navigator.buttonUp.toolTipText=Up to parent (Alt-Up)
+Navigator.checkBoxDryRun.text=Dry-run
 Navigator.detected.local.system.as=Detected local system as 
 Navigator.displaying=Displaying Navigator
 Navigator.error.launching.browser=Error launching browser
@@ -278,7 +287,7 @@ Settings.date.format.help.title=Date Format Help
 Settings.date.format.not.valid=The date format is not valid
 Settings.dateFormatLabel.text=Date format\:
 Settings.dateInfoButton.text.tooltip=Display date formatting help
-Settings.dateInfoButton.text=Info
+Settings.dateInfoButton.text=Help
 Settings.error.changing.look.n.feel=Error changing Look 'n Feel: 
 Settings.generalPanel.tab.title=General
 Settings.hideFilesInTreeLabel.text=Hide files in tree\:
@@ -300,6 +309,13 @@ Settings.sortFoldersBeforeFilesLabel.text=Sort folders before files\:
 Settings.sortReverseLabel.text=Sort reverse\:
 Settings.textFieldHintButtonColor.toolTipText=RGB color in hexidecimal
 Settings.this.title=ELS Navigator Settings
+ToolUI.buttonCopy.text=Copy
+ToolUI.buttonDelete.text=Delete
+ToolUI.buttonDeleteRow.text=Delete
+ToolUI.buttonNew.text=New
+ToolUI.cancelButton.text=Cancel
+ToolUI.doneButton.text=Done
+ToolUI.this.title=Tool User Interface
 Transfer.checking=Checking {0, choice, 0#target location|1#library source} for {1} with minimum {2} on {3, choice, 0#remote|1#local} path {4} has 
 Transfer.copying=Copying
 Transfer.could.not.retrieve.remote.collection.file=Could not retrieve remote collection file
@@ -329,3 +345,6 @@ Transfer.would.copy=Would copy
 Transfer.would.mv.directory.file=\  > Would mv {0, choice, 0#directory |1#file }
 Transfer.would.rm.directory=\  > Would rm directory: 
 Transfer.would.rm.file=\  > Would rm file: 
+JunkRemover.junk.pattern=Junk Pattern
+JunkRemover.case=Case?
+
