More progress on Junk Remover

--- a/src/com/groksoft/els/locales/bundle.properties
+++ b/src/com/groksoft/els/locales/bundle.properties
@@ -60,14 +60,29 @@ File.open.subscriber.remote.subscriber.failed.to.connect=Remote subscriber faile
 File.open.subscriber.subscriber.sftp.failed.to.connect=Subscriber sftp failed to connect
 File.open.subscriber=Open ELS Subscriber Library
 File.save.layout.error.saving.layout=Error saving layout: 
+JunkRemover.buttonCopy.mnemonic=C
 JunkRemover.buttonCopy.text=Copy
+JunkRemover.buttonCopy.toolTipText=Copy an existing tool configuration
+JunkRemover.buttonDelete.mnemonic=D
 JunkRemover.buttonDelete.text=Delete
-JunkRemover.buttonNewRow.text=New
-JunkRemover.buttonDeleteRow2.text=Delete
+JunkRemover.buttonDelete.toolTipText=Delete a tool configuration
+JunkRemover.buttonAddRow.mnemonic=A
+JunkRemover.buttonAddRow.text=Add
+JunkRemover.buttonAddRow.toolTipText=Add an empty pattern
+JunkRemover.buttonRemoveRow.mnemonic=E
+JunkRemover.buttonRun.mnemonic=R
+JunkRemover.buttonRun.text=Run
+JunkRemover.buttonRun.toolTipText=Execute the selected configuration on the selected Browser item(s)
+JunkRemover.buttonRemoveRow.text=Remove
+JunkRemover.buttonRemoveRow.toolTipText=Delete one or more patterns
+JunkRemover.buttonNew.mnemonic=N
 JunkRemover.buttonNew.text=New
+JunkRemover.buttonNew.toolTipText=Add new tool configuration
 JunkRemover.cancelButton.text=Cancel
 JunkRemover.displayName=Junk Remover
-JunkRemover.doneButton.text=Done
+JunkRemover.okButton.mnemonic=O
+JunkRemover.okButton.text=OK
+JunkRemover.labelWildcards.text=\ ? \= single, * \= zero or more characters
 JunkRemover.this.title=Junk Remover
 MainFrame.cancelling.transfer.s.at.user.request=Cancelling transfer(s) at user request
 MainFrame.transfer.s.are.active.are.you.sure=Transfer(s) are active. Are you sure you want to end the program?
@@ -132,8 +147,10 @@ Navigator.buttonForward.toolTipText=Forward (Alt-Right)
 Navigator.buttonHintTracking.mnemonic=K
 Navigator.buttonHintTracking.text=\ Hint Tracking
 Navigator.buttonNewFolder.mnemonic=N
+Navigator.buttonRun.mnemonic=R
 Navigator.buttonRun.text=Run
 Navigator.buttonUp.toolTipText=Up to parent (Alt-Up)
+Navigator.checkBoxDryRun.mnemonic=D
 Navigator.checkBoxDryRun.text=Dry-run
 Navigator.detected.local.system.as=Detected local system as 
 Navigator.displaying=Displaying Navigator
@@ -347,4 +364,7 @@ Transfer.would.rm.directory=\  > Would rm directory:
 Transfer.would.rm.file=\  > Would rm file: 
 JunkRemover.junk.pattern=Junk Pattern
 JunkRemover.case=Case?
+JunkRemover.error.saving.configuration=Error saving configuration
+JunkRemover.that.configuration.already.exists=That configuration already exists
+JunkRemover.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 
