--- a/src/com/groksoft/els/locales/bundle_en_US.properties
+++ b/src/com/groksoft/els/locales/bundle_en_US.properties
@@ -17,6 +17,36 @@ Browser.system=System
 BrowserTable.column.modified=Modified
 BrowserTable.column.name=Name
 BrowserTable.column.size=Size
+JobsUI.button1.text=^
+JobsUI.buttonAddRow.mnemonic=A
+JobsUI.buttonAddRow.text=Add
+JobsUI.buttonAddRow.toolTipText=Add an empty pattern
+JobsUI.buttonAddRow2.mnemonic=A
+JobsUI.buttonAddRow2.text=Add
+JobsUI.buttonAddRow2.toolTipText=Add an empty pattern
+JobsUI.buttonNew.mnemonic=N
+JobsUI.buttonCopy.mnemonic=C
+JobsUI.buttonCopy.text=Copy
+JobsUI.buttonCopy.toolTipText=Copy an existing job configuration
+JobsUI.buttonDelete.mnemonic=D
+JobsUI.buttonDelete.text=Delete
+JobsUI.buttonDelete.toolTipText=Delete a job configuration
+JobsUI.buttonRemoveRow.mnemonic=E
+JobsUI.buttonRemoveRow.text=Remove
+JobsUI.buttonRemoveRow.toolTipText=Delete one or more patterns
+JobsUI.buttonRemoveRow2.mnemonic=E
+JobsUI.buttonRemoveRow2.text=Remove
+JobsUI.buttonRemoveRow2.toolTipText=Delete one or more patterns
+JobsUI.buttonRun.mnemonic=R
+JobsUI.buttonRun.text=Run
+JobsUI.buttonRun.toolTipText=Execute the selected configuration on the selected Browser item(s)
+JobsUI.buttonNew.text=New
+JobsUI.buttonNew.toolTipText=Add new job configuration
+JobsUI.cancelButton.text=Cancel
+JobsUI.comboBox1.prototypeDisplayValue=Publisher\nSubscriber
+JobsUI.labelHelp.toolTipText=Job help
+JobsUI.okButton.text=OK
+JobsUI.title=Jobs
 JunkRemover.are.you.sure.you.want.to.delete.configuration=Are you sure you want to delete configuration: 
 JunkRemover.button.AddRow.mnemonic=A
 JunkRemover.button.AddRow.text=Add
@@ -375,3 +405,8 @@ Transfer.would.copy=Would copy
 Transfer.would.mv.directory.file=\  > Would mv {0, choice, 0#directory |1#file }
 Transfer.would.rm.directory=\  > Would rm directory: 
 Transfer.would.rm.file=\  > Would rm file: 
+JunkRemover.cannot.run.on=Cannot run on 
+JunkRemover.run.on.N.items=Run "{0}" on {1} {2} items?
+JunkRemover.log.junk.remover.command=Junk Remover "{0}": {1}
+Navigator.subscriber=Subscriber
+Navigator.publisher=Publisher
